--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,8 +35,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
-    env:
-        ConnectionStrings__Default: Host=localhost;Port=5432;Database=testdb;Username=testuser;Password=testPassword
     services:
       postgres:
         image: postgres:15
@@ -63,6 +61,8 @@ jobs:
           name: build_artifacts
           path: ${{ env.ARTIFACTS }}
       - name: Run Unit Test
-        run: dotnet test ${{ env.ARTIFACTS }}/UnitTests/UnitTests.dll --no-build --verbosity normal
+        run: dotnet test ${{ env.ARTIFACTS }}/UnitTests/UnitTests.dll --verbosity normal
       - name: Run Integration Test
-        run: dotnet test ${{ env.ARTIFACTS }}/IntegrationTests/IntegrationTests.dll --no-build --verbosity normal
+        env:
+          ConnectionStrings__Default: Host=localhost;Port=5432;Database=testdb;Username=testuser;Password=testPassword
+        run: dotnet test ${{ env.ARTIFACTS }}/IntegrationTests/IntegrationTests.dll --verbosity normal
